--- a/docs/referencias.bib
+++ b/docs/referencias.bib
@@ -16,3 +16,46 @@
   publisher={Citeseer}
 }
 
+
+@article{snodgrass1994tsql2,
+  title={TSQL2 language specification},
+  author={Snodgrass, Richard Thomas and Ahn, Ilsoo and Ariav, Gad and Batory, Don S and Clifford, James and Dyreson, Curtis E and Elmasri, Ramez and Grandi, Fabio and Jensen, Christian S and K{\"a}fer, Wolfgang and others},
+  journal={Sigmod Record},
+  volume={23},
+  number={1},
+  pages={65--86},
+  year={1994}
+}
+
+@article{cattell2011scalable,
+  title={Scalable SQL and NoSQL data stores},
+  author={Cattell, Rick},
+  journal={ACM SIGMOD Record},
+  volume={39},
+  number={4},
+  pages={12--27},
+  year={2011},
+  publisher={ACM}
+}
+
+@article{chu1982optimal,
+  title={Optimal query processing for distributed database systems},
+  author={Chu, Wesley W. and Hurley, Paul},
+  journal={IEEE Transactions on Computers},
+  volume={31},
+  number={9},
+  pages={835--850},
+  year={1982},
+  publisher={IEEE Computer Society}
+}
+
+@inproceedings{Tran_KLF_11,
+    author           = {Tran, Thi Khanh Van and Keung, Jacky and Liu, Anna and Fekete, Alan},
+    title            = {Application Migration to Cloud: A Taxonomy of Critical Factors },
+    booktitle        = {ICSE 2011 Software Engineering for Cloud Computing Workshop (SECLOUD)},
+    month            = {may},
+    year             = {2011},
+    pages            = {22-28},
+    address          = {Hawaii, USA}
+  }
+
